<resources>
    <string name="app_name">ReachaBLE_Company</string>

    <string name="toolbar_title">@string/app_name</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="dialog_title_credentials">Credentials</string>
    <string name="dialog_message_credentials">Getting credentials</string>
    <string name="dialog_title_coupon_upload">CouponUpload</string>
    <string name="dialog_message_coupon_upload">Coupon Uploading...</string>
    <string name="toggle_start_advertise">Start advertise</string>
    <string name="toggle_stop_advertise">Stop advertise</string>
    <string name="coupon_upload_completed">Upload completed.</string>
    <string name="coupon_upload_failed">Upload failed.</string>
    <string name="title_activity_create_coupon">CreateCouponActivity</string>
    <string name="create_coupon">Create coupon</string>
    <string name="menu_send">Send</string>
    <string name="coupon_title_hint">Title</string>
    <string name="coupon_description_hint">Description</string>
    <string name="coupon_tag_hint">Tag(Space delimited)</string>
    <string name="validate_title_error">Please enter a title.</string>
    <string name="no_coupon_data">Coupon has not registered.</string>
    <string name="txt_tag">"Tag: " %1$s</string>
    <string name="toolbar_advertise">@string/advertise</string>
    <string name="switch_advertise_on">ON</string>
    <string name="switch_advertise_off">OFF</string>
    <string name="menu_title_coupon_select">Coupon select</string>
    <string name="menu_title_advertise_coupon">Advertise coupon</string>
    <string name="menu_title_about">About</string>
    <string name="menu_title_settings">Settings</string>
    <string name="btn_advertise">@string/advertise</string>
    <string name="btn_delete">DELETE</string>
    <string name="menu_title_search">Search</string>
    <string name="coupon_not_found">No results found for \"%1$s\".</string>
    <string name="failed_to_write_coupon">Failed to write coupon.</string>
    <string name="menu_title_delete">@string/btn_delete</string>
    <string name="no_category">No category</string>
    <string name="title_activity_coupon_detail">CreateCouponActivity</string>
    <string name="transition_image">detail:header:image</string>
    <string name="menu_title_grid_view">Grid view</string>
    <string name="menu_title_list_view">List view</string>
    <string name="transition_toolbar">transition:toolbar</string>
    <string name="search_hint">Coupon search</string>
    <string name="transition_creation_date">transition:creation:date</string>
    <string name="transition_category">transition:category</string>
    <string name="menu_title_coupon_upload">@string/dialog_title_coupon_upload</string>
    <string name="advertise">ADVERTISE</string>
    <string name="coupon_upload_canceled">Upload canceled.</string>
    <string name="transition_fab">transition:fab</string>
    <string name="transition_title">transition:title</string>
    <string name="deleted_coupon">%1$s deleted</string>
    <string name="undo">UNDO</string>
</resources>
