<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="jp.ac.it_college.std.ikemen.reachable.company.CouponUploadActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/create_coupon"
        app:popupTheme="@style/Theme.AppCompat.Light"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <ImageView
        android:id="@+id/img_coupon_preview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_coupon_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/img_coupon_preview">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editText_coupon_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/coupon_title_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_coupon_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/textInputLayout_coupon_title">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editText_coupon_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/coupon_description_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_coupon_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/textInputLayout_coupon_description">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editText_coupon_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/coupon_tag_hint"/>

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
